fix: clear project
